--- a/2015.ipynb
+++ b/2015.ipynb
@@ -14198,11 +14198,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Today, the Elves are playing a game called look-and-say. They take turns making sequences by reading aloud the previous sequence and using that reading as the next sequence. For example, `211` is read as \"one two, two ones\", which becomes `1221` (`1` `2`, `2` `1`s).\n",
+    "\n",
+    "Look-and-say sequences are generated iteratively, using the previous value as input for the next step. For each step, take the previous value, and replace each run of digits (like `111`) with the number of digits (`3`) followed by the digit itself (`1`).\n",
+    "\n",
+    "For example:\n",
+    "\n",
+    "- `1` becomes `11` (`1` copy of digit `1`).\n",
+    "- `11` becomes `21` (`2` copies of digit `1`).\n",
+    "- `21` becomes `1211` (one `2` followed by one `1`).\n",
+    "- `1211` becomes `111221` (one `1`, one `2`, and two `1`s).\n",
+    "- `111221` becomes `312211` (three `1`s, two `2`s, and one `1`).\n",
+    "\n",
+    "Starting with the digits in your puzzle input, apply this process 40 times. What is the length of the result?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def look_and_say(inp):\n",
+    "  idx = 0\n",
+    "\n",
+    "  new_str = ''\n",
+    "  while idx < len(inp):\n",
+    "    # print(f'idx: {idx}')\n",
+    "    c = inp[idx]\n",
+    "    count = 1\n",
+    "    try: \n",
+    "      while inp[idx] == inp[idx+1]:\n",
+    "        # print(f'idx: {idx}')\n",
+    "        count += 1\n",
+    "        idx += 1\n",
+    "    except Exception:\n",
+    "      pass\n",
+    "    \n",
+    "    idx += 1\n",
+    "    # print(f\"idx: {idx}; {count} {c}s\")\n",
+    "    new_str += str(count) + c\n",
+    "\n",
+    "  return new_str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert look_and_say('1') == '11'\n",
+    "assert look_and_say('11') == '21'\n",
+    "assert look_and_say('21') == '1211'\n",
+    "assert look_and_say('1211') == '111221'\n",
+    "assert look_and_say('111221') == '312211'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -14215,7 +14269,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Starting with the digits in your puzzle input, apply this process 40 times. What is the length of the result?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "252594\n"
+     ]
+    }
+   ],
+   "source": [
+    "inp = '1113222113'\n",
+    "for i in range(40):\n",
+    "  inp = look_and_say(inp)\n",
+    "\n",
+    "print(len(inp))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Part 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Neat, right? You might also enjoy hearing John Conway talking about this sequence (that's Conway of Conway's Game of Life fame).\n",
+    "\n",
+    "Now, starting again with the digits in your puzzle input, apply this process 50 times. What is the length of the new result?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3579328\n"
+     ]
+    }
+   ],
+   "source": [
+    "inp = '1113222113'\n",
+    "for i in range(50):\n",
+    "  inp = look_and_say(inp)\n",
+    "\n",
+    "print(len(inp))"
    ]
   },
   {
@@ -14229,7 +14341,119 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Santa's previous password expired, and he needs help choosing a new one.\n",
+    "\n",
+    "To help him remember his new password after the old one expires, Santa has devised a method of coming up with a password based on the previous one. Corporate policy dictates that passwords must be exactly eight lowercase letters (for security reasons), so he finds his new password by incrementing his old password string repeatedly until it is valid.\n",
+    "\n",
+    "Incrementing is just like counting with numbers: `xx`, `xy`, `xz`, `ya`, `yb`, and so on. Increase the rightmost letter one step; if it was `z`, it wraps around to `a`, and repeat with the next letter to the left until one doesn't wrap around.\n",
+    "\n",
+    "Unfortunately for Santa, a new Security-Elf recently started, and he has imposed some additional password requirements:\n",
+    "\n",
+    "- Passwords must include one increasing straight of at least three letters, like `abc`, `bcd`, `cde`, and so on, up to `xyz`. They cannot skip letters; `abd` doesn't count.\n",
+    "- Passwords may not contain the letters `i`, `o`, or `l`, as these letters can be mistaken for other characters and are therefore confusing.\n",
+    "- Passwords must contain at least two different, non-overlapping pairs of letters, like `aa`, `bb`, or `zz`.\n",
+    "\n",
+    "For example:\n",
+    "\n",
+    "- `hijklmmn` meets the first requirement (because it contains the straight `hij`) but fails the second requirement requirement (because it contains `i` and `l`).\n",
+    "- `abbceffg` meets the third requirement (because it repeats `bb` and `ff`) but fails the first requirement.\n",
+    "- `abbcegjk` fails the third requirement, because it only has one double letter (`bb`).\n",
+    "- The next password after `abcdefgh` is `abcdffaa`.\n",
+    "- The next password after `ghijklmn` is `ghjaabcc`, because you eventually skip all the passwords that start with `ghi...`, since `i` is not allowed.\n",
+    "\n",
+    "Given Santa's current password (your puzzle input), what should his next password be?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def next_pass(p):\n",
+    "  new_p = p[:7] + chr(ord(p[7]) + 1)\n",
+    "\n",
+    "  while '{' in new_p:\n",
+    "    overflow_idx = new_p.rindex('{')\n",
+    "    new_p = list(new_p)\n",
+    "    new_p[overflow_idx] = 'a'\n",
+    "    new_p = ''.join(new_p)\n",
+    "    if overflow_idx > 1:\n",
+    "      new_p = list(new_p)\n",
+    "      new_p[overflow_idx - 1] = chr(ord(new_p[overflow_idx - 1]) + 1)\n",
+    "      new_p = ''.join(new_p)\n",
+    "\n",
+    "  return new_p\n",
+    "\n",
+    "def has_two_doubles(p):\n",
+    "  count = 0\n",
+    "  first_double = None\n",
+    "  for i in range(len(p) - 1):\n",
+    "    if p[i] == p[i+1]:\n",
+    "      first_double = p[i]\n",
+    "      first_double_idx = i + 1\n",
+    "      break\n",
+    "  \n",
+    "  # we didn't find even one double, so return False\n",
+    "  if first_double is None:\n",
+    "    return False\n",
+    "  else:\n",
+    "    for i in range(first_double_idx + 1, len(p) - 1):\n",
+    "      if p[i] == p[i+1] and p[i] != first_double:\n",
+    "        return True\n",
+    "    return False\n",
+    "\n",
+    "def has_increasing_three(p):\n",
+    "  for i in range(len(p) - 2):\n",
+    "    if ord(p[i]) + 2 == ord(p[i+1]) + 1 and ord(p[i+1]) + 1 == ord(p[i+2]):\n",
+    "      print(p[i:i+3])\n",
+    "      return True\n",
+    "  return False\n",
+    "\n",
+    "def is_good(p):\n",
+    "  if 'i' in p or 'o' in p or 'l' in p:\n",
+    "    # print(\"failed iol\")\n",
+    "    return False\n",
+    "  \n",
+    "  if not has_two_doubles(p):\n",
+    "    # print(\"failed doubles\")\n",
+    "    return False\n",
+    "  \n",
+    "  if not has_increasing_three(p):\n",
+    "    # print(\"failed increasing three\")\n",
+    "    return False\n",
+    "\n",
+    "  return True\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Part 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xyz\n",
+      "cqjxxyzz\n"
+     ]
+    }
+   ],
+   "source": [
+    "inp = 'cqjxjnds'\n",
+    "while True:\n",
+    "  inp = next_pass(inp)\n",
+    "  if is_good(inp):\n",
+    "    print(inp)\n",
+    "    break"
    ]
   },
   {
@@ -14237,6 +14461,29 @@
    "metadata": {},
    "source": [
     "### Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abc\n",
+      "cqkaabcc\n"
+     ]
+    }
+   ],
+   "source": [
+    "inp = 'cqjxxyzz'\n",
+    "while True:\n",
+    "  inp = next_pass(inp)\n",
+    "  if is_good(inp):\n",
+    "    print(inp)\n",
+    "    break"
    ]
   },
   {
