--- a/2015.ipynb
+++ b/2015.ipynb
@@ -19195,7 +19195,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## Puzzle 19"
    ]
@@ -19509,7 +19512,182 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "To keep the Elves busy, Santa has them deliver some presents by hand, door-to-door. He sends them down a street with infinite houses numbered sequentially: `1`, `2`, `3`, `4`, `5`, and so on.\n",
+    "\n",
+    "Each Elf is assigned a number, too, and delivers presents to houses based on that number:\n",
+    "\n",
+    "- The first Elf (number 1) delivers presents to every house: `1`, `2`, `3`, `4`, `5`, ....\n",
+    "- The second Elf (number 2) delivers presents to every second house: `2`, `4`, `6`, `8`, `10`, ....\n",
+    "- Elf number 3 delivers presents to every third house: `3`, `6`, `9`, `12`, `15`, ....\n",
+    "\n",
+    "There are infinitely many Elves, numbered starting with `1`. Each Elf delivers presents equal to ten times his or her number at each house.\n",
+    "\n",
+    "So, the first nine houses on the street end up like this:\n",
+    "\n",
+    "```\n",
+    "House 1 got 10 presents.\n",
+    "House 2 got 30 presents.\n",
+    "House 3 got 40 presents.\n",
+    "House 4 got 70 presents.\n",
+    "House 5 got 60 presents.\n",
+    "House 6 got 120 presents.\n",
+    "House 7 got 80 presents.\n",
+    "House 8 got 150 presents.\n",
+    "House 9 got 130 presents.\n",
+    "```\n",
+    "\n",
+    "The first house gets `10` presents: it is visited only by Elf `1`, which delivers `1 * 10 = 10` presents. The fourth house gets `70` presents, because it is visited by Elves `1`, `2`, and `4`, for a total of `10 + 20 + 40 = 70` presents.\n",
+    "\n",
+    "What is the lowest house number of the house to get at least as many presents as the number in your puzzle input?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inp = 34000000"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Testing "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "houses = [0] * 11\n",
+    "\n",
+    "def send_elf(houses, elf_num):\n",
+    "    house_idx = elf_num - 1\n",
+    "    while house_idx < len(houses):\n",
+    "        houses[house_idx] += 10 * elf_num\n",
+    "        house_idx += elf_num\n",
+    "\n",
+    "    return houses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 µs ± 19.3 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "houses = [0] * 11\n",
+    "for i in range(1, 11):\n",
+    "    # print(f\"Running {i}\")\n",
+    "    houses = send_elf(houses, i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_house_total(house_num):\n",
+    "    # the nth house will not get any more presents after the nth elf\n",
+    "    total = 0\n",
+    "    for elf_num in range(1, house_num+1):\n",
+    "        if house_num % elf_num == 0:\n",
+    "            total += 10 * elf_num\n",
+    "    return total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.86 µs ± 74.5 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit \n",
+    "[calc_house_total(i) for i in range(1, 11)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Part 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "786000 25534080 closest so far was 785400 with diff of 1859200\n",
+      "Met condition on house 786240\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tqdm import tqdm\n",
+    "\n",
+    "closest = 0\n",
+    "diff = inp\n",
+    "\n",
+    "for i in range(785400, 900000, 10):\n",
+    "    # print(f\"Running {i}\")\n",
+    "    total = calc_house_total(i)\n",
+    "    if inp - total < diff:\n",
+    "        diff = inp - total\n",
+    "        closest = i\n",
+    "    # print(houses)\n",
+    "    if i % 1000 == 0:\n",
+    "        print(i, total, 'closest so far was', closest, 'with diff of', diff)\n",
+    "    if total >= inp:\n",
+    "        print(f\"Met condition on house {i}\")\n",
+    "        break\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calc_house_total(786240) > inp"
    ]
   },
   {
@@ -19523,7 +19701,194 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The Elves decide they don't want to visit an infinite number of houses. Instead, each Elf will stop after delivering presents to `50` houses. To make up for it, they decide to deliver presents equal to eleven times their number at each house.\n",
+    "\n",
+    "With these changes, what is the new lowest house number of the house to get at least as many presents as the number in your puzzle input?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_house_total(house_num):\n",
+    "    # the nth house will not get any more presents after the nth elf\n",
+    "    total = 0\n",
+    "    for elf_num in range(1, house_num+1):\n",
+    "        if house_num % elf_num == 0 and house_num // elf_num <= 50:\n",
+    "            total += 11 * elf_num\n",
+    "    return total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "819000 33717915 closest so far was 819000 with diff of 282085\n",
+      "820000 21901825 closest so far was 819000 with diff of 282085\n",
+      "821000 20861610 closest so far was 819000 with diff of 282085\n",
+      "822000 28195970 closest so far was 819000 with diff of 282085\n",
+      "823000 20912430 closest so far was 819000 with diff of 282085\n",
+      "824000 21787590 closest so far was 819000 with diff of 282085\n",
+      "825000 29261375 closest so far was 819000 with diff of 282085\n",
+      "826000 24087635 closest so far was 819000 with diff of 282085\n",
+      "827000 21014070 closest so far was 819000 with diff of 282085\n",
+      "828000 31253805 closest so far was 819000 with diff of 282085\n",
+      "829000 21064890 closest so far was 819000 with diff of 282085\n",
+      "830000 21660925 closest so far was 819000 with diff of 282085\n",
+      "831000 27742935 closest so far was 819000 with diff of 282085\n",
+      "Met condition on house 831600\n"
+     ]
+    }
+   ],
+   "source": [
+    "closest = 0\n",
+    "diff = inp\n",
+    "\n",
+    "for i in range(819000, 840000, 10):\n",
+    "    # print(f\"Running {i}\")\n",
+    "    total = calc_house_total(i)\n",
+    "    if inp - total < diff:\n",
+    "        diff = inp - total\n",
+    "        closest = i\n",
+    "    # print(houses)\n",
+    "    if i % 1000 == 0:\n",
+    "        print(i, total, 'closest so far was', closest, 'with diff of', diff)\n",
+    "    if total >= inp:\n",
+    "        print(f\"Met condition on house {i}\")\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Redoing it properly after reading more about other solutions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# // Algo 1\n",
+    "# for i = 1 .. N / 10\n",
+    "#     for j = i .. N / 10 in steps of i\n",
+    "#         house[j] += i * 10\n",
+    "\n",
+    "N = inp \n",
+    "house = [0] * (inp // 10)\n",
+    "              \n",
+    "for i in tqdm(range(1, N//10)):\n",
+    "    for j in range(i, N//10, i):\n",
+    "        house[j] += i * 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "786240 831600\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "def GetDivisors(n):\n",
+    "    small_divisors = [i for i in range(1, int(math.sqrt(n)) + 1) if n % i == 0]\n",
+    "    large_divisors = [n // d for d in small_divisors if n != d * d]\n",
+    "    return small_divisors + large_divisors\n",
+    "\n",
+    "target = inp\n",
+    "part_one, part_two = None, None\n",
+    "i = 0\n",
+    "while not part_one or not part_two:\n",
+    "    i += 1\n",
+    "    divisors = GetDivisors(i)\n",
+    "    if not part_one:\n",
+    "        if sum(divisors) * 10 >= target:\n",
+    "            part_one = i\n",
+    "    if not part_two:\n",
+    "        if sum(d for d in divisors if i / d <= 50) * 11 >= target:\n",
+    "            part_two = i\n",
+    "print(part_one, part_two)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Puzzle 21"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Little Henry Case got a new video game for Christmas. It's an RPG, and he's stuck on a boss. He needs to know what equipment to buy at the shop. He hands you the controller.\n",
+    "\n",
+    "In this game, the player (you) and the enemy (the boss) take turns attacking. The player always goes first. Each attack reduces the opponent's hit points by at least `1`. The first character at or below `0` hit points loses.\n",
+    "\n",
+    "Damage dealt by an attacker each turn is equal to the attacker's damage score minus the defender's armor score. An attacker always does at least `1` damage. So, if the attacker has a damage score of `8`, and the defender has an armor score of `3`, the defender loses `5` hit points. If the defender had an armor score of `300`, the defender would still lose `1` hit point.\n",
+    "\n",
+    "Your damage score and armor score both start at zero. They can be increased by buying items in exchange for gold. You start with no items and have as much gold as you need. Your total damage or armor is equal to the sum of those stats from all of your items. You have 100 hit points.\n",
+    "\n",
+    "Here is what the item shop is selling:\n",
+    "\n",
+    "```\n",
+    "Weapons:    Cost  Damage  Armor\n",
+    "Dagger        8     4       0\n",
+    "Shortsword   10     5       0\n",
+    "Warhammer    25     6       0\n",
+    "Longsword    40     7       0\n",
+    "Greataxe     74     8       0\n",
+    "\n",
+    "Armor:      Cost  Damage  Armor\n",
+    "Leather      13     0       1\n",
+    "Chainmail    31     0       2\n",
+    "Splintmail   53     0       3\n",
+    "Bandedmail   75     0       4\n",
+    "Platemail   102     0       5\n",
+    "\n",
+    "Rings:      Cost  Damage  Armor\n",
+    "Damage +1    25     1       0\n",
+    "Damage +2    50     2       0\n",
+    "Damage +3   100     3       0\n",
+    "Defense +1   20     0       1\n",
+    "Defense +2   40     0       2\n",
+    "Defense +3   80     0       3\n",
+    "```\n",
+    "\n",
+    "You must buy exactly one weapon; no dual-wielding. Armor is optional, but you can't use more than one. You can buy 0-2 rings (at most one for each hand). You must use any items you buy. The shop only has one of each item, so you can't buy, for example, two rings of Damage +3.\n",
+    "\n",
+    "For example, suppose you have `8` hit points, `5` damage, and `5` armor, and that the boss has `12` hit points, `7` damage, and `2` armor:\n",
+    "\n",
+    "- The player deals `5-2 = 3` damage; the boss goes down to `9` hit points.\n",
+    "- The boss deals `7-5 = 2` damage; the player goes down to `6` hit points.\n",
+    "- The player deals `5-2 = 3` damage; the boss goes down to `6` hit points.\n",
+    "- The boss deals `7-5 = 2` damage; the player goes down to `4` hit points.\n",
+    "- The player deals `5-2 = 3` damage; the boss goes down to `3` hit points.\n",
+    "- The boss deals `7-5 = 2` damage; the player goes down to `2` hit points.\n",
+    "- The player deals `5-2 = 3` damage; the boss goes down to `0` hit points.\n",
+    "\n",
+    "In this scenario, the player wins! (Barely.)\n",
+    "\n",
+    "You have `100` hit points. The boss's actual stats are in your puzzle input. What is the least amount of gold you can spend and still win the fight?\n",
+    "\n"
    ]
   },
   {
